Added in compose tweet and actionbar styling

--- a/app/src/main/res/values/secrets.xml
+++ b/app/src/main/res/values/secrets.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="api_consumer_key">3cQKnm0l7fatsWMAJwBo0xsKl</string>
-    <string name = "api_consumer_secret">6k8FXx2FbpSCdBylFfwp1v4j2HhVZLmXdnl4xlCbuHejOcFvDr</string>
+    <string name="api_consumer_key">pPFt9x8rUb0VGvFVylw0yxsiN</string>
+    <string name = "api_consumer_secret">PwkkWh7He1RLkofvsQ2qNgKQIizcu1eY1PdIDbC433TPOXQnpo
+</string>
 </resources>
