Added refresh timeline feature

--- a/app/src/main/res/values/secrets.xml
+++ b/app/src/main/res/values/secrets.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="api_consumer_key">pPFt9x8rUb0VGvFVylw0yxsiN</string>
-    <string name = "api_consumer_secret">PwkkWh7He1RLkofvsQ2qNgKQIizcu1eY1PdIDbC433TPOXQnpo
-</string>
+    <string name="api_consumer_key">yBHaUdF4JqmLweAtNJCkzAPtT</string>
+    <string name = "api_consumer_secret">NSurBAqPxbLqOpAFivFBXhQdk3Ss2GkIJiMKGbtke3rDocKFBu</string>
 </resources>
